# website

./: .gitignore  .gitmodules  .travis.yml  Gemfile  LICENSE.txt  Main.code-workspace  _config.yml  begin_deploy.sh  index.html  keybase.txt  life.html  min-css.bat  min-html-blog-light.bat  min-html-blog.bat  min-js.bat  netlify.toml  package-lock.json  package.json  readme.md  remote_deploy.sh  travis_build.sh  travis_deploy.sh  tsconfig.json  webpack.config.js
AlexPlagman/: blog.html  index.html  min-html - Copy.bat  min-js.txt  portfolio.html
AlexPlagman/Minified/: blog.html  index.html  main.css  script.js
AlexPlagman/blog/: index.html
AlexPlagman/css/: main.css  main.min.css
AlexPlagman/src/: jquery.matchHeight.min.js  script.js
Codecademy Live Tutorial/: index.html  script.js  style.css
Home Site/: about.html  blog.html  contact.html  greeter.ts  index.html  portfolio.html
Home Site/css/: flexnav.css  main.css
Home Site/src/: wat.js
Minified/: index.html
_includes/: footer.html
_layouts/: home.html
_plugins/: jekyll_ts.rb
_posts/: 2018-04-22-welcome-to-jekyll.markdown  2018-04-23-on-jekyll.md
blog/: index.html
css/: flexnav.css  life.css  life.min.css  main.css  main.min.css
src/: .clang-format  404.html  about.md  blog.md  deploy.sh  gameoflife.js  gameoflife.min.js  gifffer.js  gifffer.min.js  index.html  index.md  portfolio.md  script.js  script.min.js  serve.sh  splash-content.html  tsconfig.json
src/hugo/content/blog/error-handling-demo/: CMakeLists.txt  expected.h  main.cpp  result.h
webpack/: brain.ts  cells.ts  conway.ts
(+88 files in other folders)
